--- a/app/views/shared/notes/_comment_button.html.haml
+++ b/app/views/shared/notes/_comment_button.html.haml
@@ -28,3 +28,5 @@
                 Discuss a specific suggestion or question
                 - if @note.noteable.supports_resolvable_notes?
                   that needs to be resolved
+
+%input.btn.btn-nr.btn-create.comment-btn.js-insta-comment-button{ type: 'button', value: 'Insta Comment' }
