--- a/app/assets/stylesheets/framework/animations.scss
+++ b/app/assets/stylesheets/framework/animations.scss
@@ -156,6 +156,20 @@ a {
   }
 }
 
+@keyframes fadeInComplete {
+  0% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 .fade-in {
   animation: fadeIn $fade-in-duration 1;
+}
+
+.fade-in-complete {
+  animation: fadeInComplete $fade-in-duration 1;
 }
