--- a/app/assets/stylesheets/framework/variables.scss
+++ b/app/assets/stylesheets/framework/variables.scss
@@ -64,6 +64,7 @@ $orange-900: #853b00;
 
 $red-25: #fef7f6;
 $red-50: #fbe7e4;
+$red-75: #f8d5d0;
 $red-100: #f4c4bc;
 $red-200: #ed9d90;
 $red-300: #e67664;
