Revert "Merge branch '2433-update-locked-milestone-to-not-be-removable-for-9-2' into '9-2-stable-ee'"
This reverts commit c3ffbf752009bcbfeef9297ef658f0d44eb09ba2, reversing
changes made to b0041675fdc77967f3266c471d5342773185556e.

--- a/app/views/shared/issuable/_search_bar.html.haml
+++ b/app/views/shared/issuable/_search_bar.html.haml
@@ -181,8 +181,7 @@
 
     $(document).off('page:restore').on('page:restore', function (event) {
       if (gl.FilteredSearchManager) {
-        const filteredSearchManager = new gl.FilteredSearchManager();
-        filteredSearchManager.setup();
+        new gl.FilteredSearchManager();
       }
       Issuable.init();
       new gl.IssuableBulkActions({
