--- a/app/assets/stylesheets/framework/variables.scss
+++ b/app/assets/stylesheets/framework/variables.scss
@@ -582,3 +582,10 @@ $gl-gold-plan: #d4af37;
 $gl-silver-plan: #91a1ab;
 $gl-bronze-plan: #cd7f32;
 $gl-no-plan: $gl-gray-light;
+
+/*
+Cross-project Pipelines
+ */
+
+$linked-project-column-margin: 60px;
+
