--- a/app/assets/stylesheets/framework/system_messages.scss
+++ b/app/assets/stylesheets/framework/system_messages.scss
@@ -25,8 +25,8 @@
 
 .footer-message {
   bottom: 0;
-  height: $system-header-height;
-  line-height: $system-header-height;
+  height: $system-footer-height;
+  line-height: $system-footer-height;
 }
 
 .with-performance-bar {
@@ -82,11 +82,11 @@
   // right sidebar eg: mr page
   .nav-sidebar,
   .right-sidebar,
-  // navless pages' footer eg: login page
-  // navless pages' footer border eg: login page
+    // navless pages' footer eg: login page
+    // navless pages' footer border eg: login page
   &.devise-layout-html body .footer-container,
   &.devise-layout-html body hr.footer-fixed {
-    bottom: $system-header-height;
+    bottom: $system-footer-height;
   }
 }
 
