--- a/ee/app/views/admin/dashboard/_users_statistics.html.haml
+++ b/ee/app/views/admin/dashboard/_users_statistics.html.haml
@@ -1,2 +1,1 @@
-.text-center
-  = link_to 'Users statistics', admin_dashboard_stats_path
+= link_to 'Users statistics', admin_dashboard_stats_path, class: "btn btn-primary"
